# octavius

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  config.py  conversation.py  db.py  document_sources.py  history.py  history_enrichment.py  history_store.py  local_tool_delegations.py  local_tool_downloads.py  local_tool_history.py  local_tool_inbox.py  local_tool_reader.py  local_tool_registry.py  local_tool_specs.py  main.py  mcp_manager.py  octavius-android-design.md  octavius-prd.md  octavius_history.db-shm  octavius_history.db-wal  pyproject.toml  reader.py  reader_ingest_handlers.py  reader_ingest_service.py  reader_playback.py  reader_store.py  reader_text.py  runtime.py  schema.sql  service_clients.py  settings.py  stt.py  subagent.py  subagent_dispatcher.py  tools.py  (+3 more)
docs/: qwen-thinking-mode.md  status.md  stt-lilripper-setup.md
routes/: __init__.py  conversations.py  inbox.py  reader_api.py
static/: app-common.js  inbox-app.js  inbox.html  index-app.js  index-audio.js  index.html  manifest.json  reader-app.js  reader.html
tests/: test_conversation.py  test_document_sources.py  test_history_enrichment.py  test_history_store.py  test_local_tool_handlers.py  test_local_tool_history.py  test_local_tool_inbox.py  test_local_tool_reader.py  test_local_tool_registry.py  test_main.py  test_mcp_manager.py  test_reader.py  test_reader_ingest_handlers.py  test_reader_ingest_service.py  test_service_clients.py  test_subagent.py  test_subagent_dispatcher.py  test_websocket_session.py
